--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "dinnerplanner-html-react",
   "version": "0.1.0",
+  "homepage": "http://elenaegr.github.io/whatsthelyric",
   "private": true,
   "dependencies": {
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
     "react": "^16.8.1",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
@@ -15,6 +17,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
