--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-strap": "0.0.1",
+    "reactstrap": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
