--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
     "firebase": "^5.9.0",
