--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
+    "@google-cloud/translate": "^3.0.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
     "firebase": "^5.9.0",
+    "google-translate-api": "^2.3.0",
+    "http2": "^3.3.7",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
+    "react-helmet": "^5.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "reactstrap": "^7.1.0"
