--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@google-cloud/translate": "^3.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.17",
     "@fortawesome/free-brands-svg-icons": "^5.8.1",
     "@fortawesome/free-regular-svg-icons": "^5.8.1",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@google-cloud/translate": "^3.0.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^4.3.1",
     "firebase": "^5.9.0",
     "google-translate-api": "^2.3.0",
     "http2": "^3.3.7",
+    "query-string": "^6.4.2",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
