--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
     "react-helmet": "^5.2.0",
-    "react-router-dom": "^4.2.2",
+    "react-router": "^3.2.1",
+    "react-router-dom": "^4.4.0-beta.8",
     "react-scripts": "1.1.1",
     "reactstrap": "^7.1.0"
   },
