--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "firebase": "^5.9.0",
     "google-translate-api": "^2.3.0",
     "http2": "^3.3.7",
-    "query-string": "^6.4.2",
+    "query-string": "~5.1.1",
     "react": "^16.8.4",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.1",
